--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -1,1 +1,27 @@
+<div class="main">
+  <div class="login-form">
+    <form class="form-field">
+      <p class="form-inputs">
+        <label class="input-label">Email:</label>
+        {{input class="input-field" type="text" placeholder="Email" value=email}}
+      </p>
+
+      <p class="form-field">
+        <label class="input-label">Password:</label>
+        {{input class="input-field" type="password" placeholder="Password" value=password}}
+      </p>
+
+      {{#link-to "dashboard"}}
+        <button class="login-btn">Login</button>
+      {{/link-to}}
+
+      {{#link-to "sign-up"}}
+        <button class="signup-btn">SignUp</button>
+      {{/link-to}}
+    </form>
+  </div>
+</div>
+
+
+
 {{outlet}}
