--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -3,3 +3,12 @@
 // Uncomment this for working with yoga prototyping
 // http://rtablada.github.io/yoga-sass/#mixin-yoga-prototype
 // @include yoga-prototype();
+
+
+.login-form {
+  background: brown;
+  width: 100%;
+  // text-align: center;
+  display: flex;
+
+}
