--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,5 +1,10 @@
-<h2>Kidz Chorez</h2>
-
+<header>
+  <div class="header-container">
+    <div class="header-container_items">
+      <h2 class="header-text header-item">Kidz Chorzz</h2>
+    </div>
+  </div>
+</header>
 
 
 {{outlet}}
