--- a/app/dashboard/child/template.hbs
+++ b/app/dashboard/child/template.hbs
@@ -1,1 +1,9 @@
+<div class="dashboard-container">
+  <div class="dashboard-container_items">
+    <h2 class="dashboard-text dashboard-item">Dashboard</h2>
+  </div>
+</div>
+
+
+
 {{outlet}}
