--- a/app/dashboard/child/template.hbs
+++ b/app/dashboard/child/template.hbs
@@ -4,6 +4,30 @@
   </div>
 </div>
 
+<div class="content-container">
+  <div class="sidebar">
+    <div class="sidebar-content">
+      <h2>Kid List</h2>
+      <p>kid 1</p>
+      <p>kid2</p>
+      <p>kids3</p>
+    <button>New Kid</button>
+  </div>
+  </div>
+  <div class="main-content">
+    <div class="main-items">
+      <h2>Choices</h2>
+        <p>New Chore
+        <button>Add Chore</button>
+      </p>
+      <p>New Reward
+      <button>Add Reward</button>
+    </p>
+    <img src="https://media.giphy.com/media/s4Q3geM5T1XCo/giphy.gif" alt="">
+    </div>
+  </div>
+</div>
+
 
 
 {{outlet}}
