--- a/app/dashboard/child/template.hbs
+++ b/app/dashboard/child/template.hbs
@@ -23,10 +23,19 @@
       <p>New Reward
       <button>Add Reward</button>
     </p>
-    <img src="https://media.giphy.com/media/s4Q3geM5T1XCo/giphy.gif" alt="">
+    <img src="" alt="">
     </div>
   </div>
 </div>
+  <div class="footer">
+    <div class="footer-animation">
+      <h2>Look at my pretty animation</h2>
+      <div class="footer-information">
+        <h2>Footer Info</h2>
+      </div>
+    </div>
+  </div>
+
 
 
 
