--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,7 @@
 @import "yoga";
 @import 'dashboard';
 @import 'login';
+@import 'footer';
 
 // Uncomment this for working with yoga prototyping
 // http://rtablada.github.io/yoga-sass/#mixin-yoga-prototype
