--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -5,6 +5,12 @@
     </div>
   </div>
 </header>
-
-
 {{outlet}}
+<div class="footer">
+  <div class="footer-animation">
+    <h2>Look at my pretty animation</h2>
+    <div class="footer-information">
+      <h2>Footer Info</h2>
+    </div>
+  </div>
+</div>
