--- a/app/dashboard/parent/template.hbs
+++ b/app/dashboard/parent/template.hbs
@@ -1,1 +1,24 @@
-{{outlet}}
+<div class="content-container">
+  <div class="sidebar">
+    <div class="sidebar-content">
+      <h2>Kid List</h2>
+      {{outlet}}
+      <p>kid 1</p>
+      <p>kid2</p>
+      <p>kids3</p>
+    <button>New Kid</button>
+  </div>
+  </div>
+  <div class="main-content">
+    <div class="main-items">
+      <h2>Choices</h2>
+        <p>New Chore
+        <button>Add Chore</button>
+      </p>
+      <p>New Reward
+      <button>Add Reward</button>
+    </p>
+    <img src="" alt="">
+    </div>
+  </div>
+</div>
