--- a/app/dashboard/child/template.hbs
+++ b/app/dashboard/child/template.hbs
@@ -8,7 +8,7 @@
   <div class="sidebar">
     <div class="sidebar-content">
       <h2>Kid List</h2>
-
+      {{outlet}}
       <p>kid 1</p>
       <p>kid2</p>
       <p>kids3</p>
