--- a/app/dashboard/child/template.hbs
+++ b/app/dashboard/child/template.hbs
@@ -7,22 +7,22 @@
 <div class="content-container">
   <div class="sidebar">
     <div class="sidebar-content">
-      <h2>Kid List</h2>
+      <h2>Kid Avatar</h2>
+      <img src="https://s-media-cache-ak0.pinimg.com/236x/03/59/5a/03595aaef122cf3f28cad0f307060493.jpg" alt="">
       {{outlet}}
-      <p>kid 1</p>
-      <p>kid2</p>
-      <p>kids3</p>
-    <button>New Kid</button>
+      <p>chore 1</p>
+      <p>chore 2</p>
+      <p>chore 3</p>
   </div>
   </div>
   <div class="main-content">
     <div class="main-items">
       <h2>Choices</h2>
-        <p>New Chore
-        <button>Add Chore</button>
+        <p>Chore List
+        <button>Chore List</button>
       </p>
-      <p>New Reward
-      <button>Add Reward</button>
+      <p>Store
+      <button>Store</button>
     </p>
     <img src="" alt="">
     </div>
