--- a/app/dashboard/parent/template.hbs
+++ b/app/dashboard/parent/template.hbs
@@ -6,7 +6,9 @@
       <p>kid 1</p>
       <p>kid2</p>
       <p>kids3</p>
-    <button>New Kid</button>
+      {{#link-to "dashboard.parent.newChild"}}
+    <button>Add New Child</button>
+    {{/link-to}}
   </div>
   </div>
   <div class="main-content">
