--- a/app/dashboard/parent/new-child/template.hbs
+++ b/app/dashboard/parent/new-child/template.hbs
@@ -1,25 +1,31 @@
 <div class="boss-container">
   <div class="child-info">
     <form class="form-field" {{action newChild model on="submit"}}>
-    <p class="form-inputs">
-      <label class="input-label">Username:</label>
-      {{input class="input-field" type="text" placeholder="Username" value=model.username}}
-    </p>
+      <p class="form-inputs">
+        <label class="input-label">Username:</label>
+        {{input class="input-field" type="text" placeholder="Username" value=model.username}}
+      </p>
 
-    <p class="form-inputs">
-      <label class="input-label">Password:</label>
-      {{input class="input-field" type="password" placeholder="Password" value=model.password}}
-    </p>
+      <p class="form-inputs">
+        <label class="input-label">Password:</label>
+        {{input class="input-field" type="password" placeholder="Password" value=model.password}}
+      </p>
 
-  </form>
+      <p class="form-inputs">
+        <label class="input-label">Point-Total:</label>
+        {{input class="input-field" type="number" placeholder="Point-Total" value=model.point-total}}
+      </p>
 
-    <ul>
-      <li class="child-item">{{model.child.avatar}}</li>
-      <li class="child-item">{{model.child.username}}</li>
-      <li class="child-item">{{model.child.password}}</li>
-      <li class="child-item">{{model.child.point-total}}</li>
-      <li class="child-item">{{model.child.chore}}</li>
-    </ul>
+      <p class="form-inputs">
+        <label class="input-label">Chore:</label>
+        {{input class="input-field" type="text" placeholder="Chore" value=model.chore}}
+      </p>
+
+    </form>
+    {{#link-to "dashboard.parent"}}
+    <button>Submit</button>
+    {{/link-to}}
+
   </div>
 </div>
 
