--- a/app/dashboard/parent/new-child/template.hbs
+++ b/app/dashboard/parent/new-child/template.hbs
@@ -1,30 +1,29 @@
 <div class="boss-container">
   <div class="child-info">
-    <form class="form-field" {{action newChild model on="submit"}}>
+    {{#simple-form class="" onsubmit=(action createNewChild) as |formValues|}}
       <p class="form-inputs">
         <label class="input-label">Username:</label>
-        {{input class="input-field" type="text" placeholder="Username" value=model.username}}
+        {{input class="input-field" type="text" placeholder="Username" value=formValue.username}}
       </p>
 
       <p class="form-inputs">
         <label class="input-label">Password:</label>
-        {{input class="input-field" type="password" placeholder="Password" value=model.password}}
+        {{input class="input-field" type="password" placeholder="Password" value=formValue.password}}
       </p>
 
       <p class="form-inputs">
         <label class="input-label">Point-Total:</label>
-        {{input class="input-field" type="number" placeholder="Point-Total" value=model.point-total}}
+        {{input class="input-field" type="number" placeholder="Point-Total" value=formValue.point-total}}
       </p>
 
       <p class="form-inputs">
         <label class="input-label">Chore:</label>
-        {{input class="input-field" type="text" placeholder="Chore" value=model.chore}}
+        {{input class="input-field" type="text" placeholder="Chore" value=formValue.chore}}
       </p>
 
-    </form>
-    {{#link-to "dashboard.parent"}}
     <button>Submit</button>
-    {{/link-to}}
+    {{/simple-form}}
+
 
   </div>
 </div>
