--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -5,14 +5,19 @@
 }
 
 .footer-animation {
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
   width: 65rem;
   margin: auto;
-  background: grey;
+
+   background: grey;
 
 
 }
 
 .footer-information {
+  display: flex;
   width: 65rem;
   margin: auto;
   background: orange;
