--- a/app/dashboard/child/template.hbs
+++ b/app/dashboard/child/template.hbs
@@ -12,7 +12,7 @@
       {{outlet}}
     <ul>
       {{#each model as |chore|}}
-      <li class="chore-item">{{model.chore}}</li>
+      <li class="chore-item">{{chore.name}}</li>
       {{/each}}
     </ul>
   </div>
