--- a/app/styles/dashboard.scss
+++ b/app/styles/dashboard.scss
@@ -10,7 +10,7 @@
   margin: auto;
   display: flex;
   // background-image: url(http://www.absoluteanime.com/kirby/cleaning_kirby.jpg);
-  // background: pink;
+   background: #e2f1f6;
 
 }
 
@@ -19,7 +19,7 @@
   padding-left: 2rem;
   padding-bottom: 1rem;
 
-  // background: green;
+   background: #e2f1f6;
 }
 
 .main-content {
