--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -11,7 +11,7 @@
   width: 65rem;
   margin: auto;
 
-   background: grey;
+   background: #9696ab;
 
 
 }
@@ -20,6 +20,6 @@
   display: flex;
   width: 65rem;
   margin: auto;
-  background: orange;
+  background: #e7bd3b;
 
 }
