--- a/app/dashboard/child/template.hbs
+++ b/app/dashboard/child/template.hbs
@@ -7,7 +7,7 @@
 <div class="content-container">
   <div class="sidebar">
     <div class="sidebar-content">
-      <h2>Kid Avatar</h2>
+      <h2>Kid's Dashboard</h2>
       <img src="https://s-media-cache-ak0.pinimg.com/236x/03/59/5a/03595aaef122cf3f28cad0f307060493.jpg" alt="">
       {{outlet}}
     <ul>
