--- a/app/dashboard/parent/new-chore/template.hbs
+++ b/app/dashboard/parent/new-chore/template.hbs
@@ -1,1 +1,32 @@
-{{outlet}}
+<div class="chore-container">
+  <div class="chore-info">
+    {{#simple-form class="" onsubmit=(action createNewChore) as |formValues|}}
+    <p class="form-inputs">
+      <label class="input-label">Chore Name:</label>
+        {{input class="input-field" type="text" placeholder="Chore Name" value=formValues.name}}
+    </p>
+
+    <p class="form-inputs">
+      <label class="input-label">Description:</label>
+        {{input class="input-field" type="text" placeholder="Chore Name" value=formValues.description}}
+    </p>
+
+    <p class="form-inputs">
+      <label class="input-label">Avatar:</label>
+        {{input class="input-field" type="text" placeholder="Chore Name" value=formValues.avatar}}
+    </p>
+
+    <p class="form-inputs">
+      <label class="input-label">Points:</label>
+        {{input class="input-field" type="text" placeholder="Chore Name" value=formValues.points}}
+    </p>
+
+    <p class="form-inputs">
+      <label class="input-label">Date:</label>
+        {{input class="input-field" type="text" placeholder="Chore Name" value=formValues.date}}
+    </p>
+    <button>Submit</button>
+    {{/simple-form}}
+
+  </div>
+</div>
