--- a/app/dashboard/child/template.hbs
+++ b/app/dashboard/child/template.hbs
@@ -9,24 +9,18 @@
     <div class="sidebar-content">
       <h2>Kid Avatar</h2>
       <img src="https://s-media-cache-ak0.pinimg.com/236x/03/59/5a/03595aaef122cf3f28cad0f307060493.jpg" alt="">
-      {{outlet}}
-    <ul>
-      {{#each model as |chore|}}
-      <li class="chore-item">{{model.chore}}</li>
-      {{/each}}
-    </ul>
+      <h2>14 Points</h2>
   </div>
   </div>
-  <div class="main-content">
-    <div class="main-items">
-      <h2>Choices</h2>
-        <p>Chore List
-        <button>Chore List</button>
-      </p>
-      <p>Store
-      <button>Store</button>
-    </p>
-    <img src="" alt="">
-    </div>
-  </div>
+   <div class="">
+     {{#link-to "dashboard.child.assignment"}}
+       <button>Chorez</button>
+     {{/link-to}}
+   </div>
+   <div class="">
+     {{#link-to "dashboard.child.purchase"}}
+     <button>Prizes</button>
+     {{/link-to}}
+   </div>
+  {{outlet}}
 </div>
