--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -22,7 +22,8 @@
 {{outlet}}
 <div class="footer">
   <div class="footer-animation">
-    <h2>Look at my pretty animation</h2>
+    <div class="logo">Logo</div>
+    <h2>Earn Rewards for Chores!!</h2>
     <div class="footer-information">
       <h2>Footer Info</h2>
     </div>
