--- a/app/styles/dashboard.scss
+++ b/app/styles/dashboard.scss
@@ -6,7 +6,7 @@
 }
 
 .content-container{
-  max-width: 65rem;
+  // max-width: 65rem;
   margin: auto;
   display: flex;
   // background-image: url(http://www.absoluteanime.com/kirby/cleaning_kirby.jpg);
@@ -27,7 +27,7 @@
 }
 
 .main-items {
-  width: 35rem;
+
   padding-left: 2rem;
 
   // background: pink;
