--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  width: 65rem;
+
   margin: auto;
 
 }
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
-  width: 65rem;
+
   margin: auto;
 
    background: #9696ab;
@@ -19,7 +19,7 @@
 
 .footer-information {
   display: flex;
-  width: 65rem;
+  width: 100%;
   margin: auto;
   background: #e7bd3b;
 
