--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -17,6 +17,25 @@
 
 }
 
+.logo {
+  border-style: solid;
+    border-width: 1px;
+    display: block;
+    width: 100px;
+    height: 100px;
+    background-color:blue;
+    -webkit-transition: width 2s, height 2s, background-color 2s, -webkit-transform 2s;
+   transition: width 2s, height 2s, background-color 2s, transform 2s;
+}
+
+.box:hover {
+    background-color: #FFCCCC;
+    width: 200px;
+    height: 200px;
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
+
 .footer-information {
   display: flex;
   width: 100%;
