new logo feature

--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -23,7 +23,7 @@
 <div class="footer">
   <div class="footer-animation">
     <div class="logo">Logo</div>
-    <h2>Earn Rewards for Chores!!</h2>
+    <p>Earn Rewards for Chores!!</p>
   </div>
   {{outlet}}
     <div class="footer-information">
