--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -28,12 +28,29 @@
    transition: width 2s, height 2s, background-color 2s, transform 2s;
 }
 
-.box:hover {
+.logo:hover {
     background-color: #FFCCCC;
     width: 200px;
     height: 200px;
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+}
+
+p {
+  animation-duration: 3s;
+  animation-name: slidein;
+}
+
+@keyframes {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+   width: 100%;
+  }
 }
 
 .footer-information {
