--- a/app/dashboard/parent/new-reward/template.hbs
+++ b/app/dashboard/parent/new-reward/template.hbs
@@ -4,22 +4,22 @@
 
 <p class="form-inputs">
   <label class="input-label">Picture:</label>
-  {{input class="input-field" type="text" name="Pic" value=formValues.avatar}}
+  {{input class="input-field" type="text" name="Pic" placeholder="Picture" value=formValues.avatar}}
 </p>
 
 <p class="form-inputs">
   <label class="input-label">Name</label>
-  {{input class="input-field" type="text" name="Name" value=formValues.name}}
+  {{input class="input-field" type="text" name="Name" placeholder="Name" value=formValues.name}}
 </p>
 
 <p class="form-inputs">
   <label class="input-label">Description</label>
-  {{input class="input-field" type="text" name="Description" value=formValues.description}}
+  {{input class="input-field" type="text" name="Description" placeholder="Description" value=formValues.description}}
 </p>
 
 <p class="form-inputs">
   <label class="input-label">Points</label>
-  {{input class="input-field" type="text" name="Points" value=formValues.points}}
+  {{input class="input-field" type="number" name="Points" placeholder="Points" value=formValues.points}}
 </p>
 
   <button>Submit</button>
