--- a/app/dashboard/parent/template.hbs
+++ b/app/dashboard/parent/template.hbs
@@ -29,13 +29,15 @@
   <div class="main-content">
     <div class="main-items">
       <h2>Choices</h2>
-        <p>New Chore
+        <p>new chore
           {{#link-to "dashboard.parent.new-chore"}}
         <button>Add Chore</button>
         {{/link-to}}
       </p>
-      <p>New Reward
+      <p>new reward
+        {{#link-to "dashboard.parent.new-reward"}}
       <button>Add Reward</button>
+      {{/link-to}}
     </p>
     <img src="" alt="">
     </div>
