--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -6,15 +6,15 @@
 
 
 .footer-animation {
+  color: green;
+  font-family: fantasy;
   display: flex;
   flex-direction: column;
   overflow: auto;
 
   margin: auto;
-
-   background: #9696ab;
-
-
+  background-image: url(http://thumbs.dreamstime.com/x/many-active-kids-kite-happy-boys-girls-run-park-33996688.jpg);
+  //  background: #9696ab;
 }
 
 .logo {
@@ -36,12 +36,13 @@
     transform: rotate(360deg);
 }
 
-p {
-  animation-duration: 3s;
+.title {
+  animation-duration: 10s;
   animation-name: slidein;
+  animation-iteration-count: infinite;
 }
 
-@keyframes {
+@keyframes slidein {
   from {
     margin-left: 100%;
     width: 300%;
@@ -49,7 +50,7 @@ p {
 
   to {
     margin-left: 0%;
-   width: 100%;
+    width: 50%;
   }
 }
 
