prize to reward

--- a/app/dashboard/child/store/template.hbs
+++ b/app/dashboard/child/store/template.hbs
@@ -1,6 +1,6 @@
 <div class="main-content">
   <div class="main-items">
-    <h4>prize booth view nested in child dash</h4>
+    <h4>reward booth view nested in child dash</h4>
     <ul>
       {{#each model as |purchase|}}
       <li class="chore-item">{{purchase.points}}</li>
