--- a/app/dashboard/child/template.hbs
+++ b/app/dashboard/child/template.hbs
@@ -25,7 +25,7 @@
    </div>
    <div class="">
      {{#link-to "dashboard.child.purchase"}}
-     <button>Prizes</button>
+     <button>Rewards</button>
      {{/link-to}}
    </div>
 </div>
