--- a/app/dashboard/parent/rewards/index/template.hbs
+++ b/app/dashboard/parent/rewards/index/template.hbs
@@ -1,6 +1,6 @@
-<h2>All Posts</h2>
+<h2>All Rewards</h2>
 
-{{#link-to "dashboard.parent.prizes.new"}}New Reward{{/link-to}}
+{{#link-to "dashboard.parent.rewards.new"}}New Reward{{/link-to}}
 <ul>
   <li>URL</li>
   <li>Name</li>
@@ -17,7 +17,7 @@
   <li>{{post.points}}</li>
 </ul>
 
-{{#link-to "dashboard.parent.prizes.edit" post.id}}
+{{#link-to "dashboard.parent.rewards.edit" post.id}}
 <span class="fa fa-pencil"></span>
 {{/link-to}}
 
