--- a/app/dashboard/parent/template.hbs
+++ b/app/dashboard/parent/template.hbs
@@ -29,12 +29,12 @@
   <div class="main-content">
     <div class="main-items">
       <h2>Choices</h2>
-        <p>new chore
+        <p>Assignment
           {{#link-to "dashboard.parent.new-chore"}}
-        <button>Add Chore</button>
+        <button>Add Assignment</button>
         {{/link-to}}
       </p>
-      <p>new reward
+      <p>Prize Booth
         {{#link-to "dashboard.parent.new-reward"}}
       <button>Add Reward</button>
       {{/link-to}}
