--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -22,7 +22,7 @@
 
 <div class="footer">
   <div class="footer-animation">
-    <div class="logo">Logo</div>
+    <img class="logo" src="https://cdn.evbuc.com/images/11170117/33265003369/1/logo.png" alt="">
     <p class="title">Earn Rewards for Chores!!</p>
   </div>
   {{outlet}}
