--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -6,11 +6,11 @@
 
 
 .footer-animation {
-  color: green;
+  color: black;
   font-family: fantasy;
+  font-size: 2.4rem;
   display: flex;
   flex-direction: column;
-  overflow: auto;
 
   margin: auto;
   background-image: url(http://thumbs.dreamstime.com/x/many-active-kids-kite-happy-boys-girls-run-park-33996688.jpg);
@@ -29,7 +29,7 @@
 }
 
 .logo:hover {
-    background-color: #FFCCCC;
+    background-color: white;
     width: 200px;
     height: 200px;
     -webkit-transform: rotate(360deg);
@@ -37,11 +37,12 @@
 }
 
 .title {
-  animation-duration: 10s;
+  line-height: 2.4rem;
+
   animation-name: slidein;
+  animation-duration: 10s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
-
 }
 
 @keyframes slidein {
@@ -49,12 +50,14 @@
     margin-left: 100%;
     width: 300%;
     opacity: 0;
+    font-size: 0.65rem;
   }
 
   to {
     margin-left: 0%;
     width: 50%;
     opacity: 1;
+    font-size: 2.2rem;
   }
 }
 
@@ -63,5 +66,6 @@
   width: 100%;
   margin: auto;
   background: #e7bd3b;
+  overflow: hidden;
 
 }
