--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -6,34 +6,34 @@
 
 
 .footer-animation {
-  color: black;
-  font-family: fantasy;
-  font-size: 2.4rem;
   display: flex;
   flex-direction: column;
-
   margin: auto;
-  background-image: url(http://thumbs.dreamstime.com/x/many-active-kids-kite-happy-boys-girls-run-park-33996688.jpg);
+  background-image: url('http://thumbs.dreamstime.com/x/many-active-kids-kite-happy-boys-girls-run-park-33996688.jpg');
+  color: black;
+
+  font-family: fantasy;
+  font-size: 2.4rem;
   //  background: #9696ab;
 }
 
 .logo {
+  display: block;
+  width: 100px;
+  height: 100px;
+  transition: width 2s, height 2s, background-color 2s, transform 2s;
+  border-width: 1px;
   border-style: solid;
-    border-width: 1px;
-    display: block;
-    width: 100px;
-    height: 100px;
-    background-color:blue;
-    -webkit-transition: width 2s, height 2s, background-color 2s, -webkit-transform 2s;
-   transition: width 2s, height 2s, background-color 2s, transform 2s;
+  background-color: blue;
+  -webkit-transition: width 2s, height 2s, background-color 2s, -webkit-transform 2s;
 }
 
 .logo:hover {
-    background-color: white;
-    width: 200px;
-    height: 200px;
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
+  width: 200px;
+  height: 200px;
+  transform: rotate(360deg);
+  background-color: white;
+  -webkit-transform: rotate(360deg);
 }
 
 .title {
@@ -47,17 +47,17 @@
 
 @keyframes slidein {
   from {
-    margin-left: 100%;
     width: 300%;
-    opacity: 0;
+    margin-left: 100%;
     font-size: 0.65rem;
+    opacity: 0;
   }
 
   to {
-    margin-left: 0%;
     width: 50%;
-    opacity: 1;
+    margin-left: 0%;
     font-size: 2.2rem;
+    opacity: 1;
   }
 }
 
