--- a/app/sign-up/template.hbs
+++ b/app/sign-up/template.hbs
@@ -16,7 +16,9 @@
   </p>
 
   <p>
-    <button>Submit</button>
+    <button class="menu-button">
+      {{#link-to "login"}}Submit{{/link-to}}
+    </button>
   </p>
 
 {{/simple-form}}
