--- a/app/styles/login.scss
+++ b/app/styles/login.scss
@@ -1,7 +1,23 @@
-.login-form {
+.main {
   display: flex;
-  width: 100%;
+}
+
+.parent-login-form {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  padding-bottom: 2rem;
+  padding-left: 3rem;
   background: brown;
   // text-align: center;
 
+}
+
+.child-login-form {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  padding-bottom: 2rem;
+  padding-left: 3rem;
+  background: brown;
 }
