--- a/app/sign-up/template.hbs
+++ b/app/sign-up/template.hbs
@@ -16,9 +16,7 @@
   </p>
 
   <p>
-    <button class="menu-button">
-      {{#link-to "login"}}Submit{{/link-to}}
-    </button>
+    <button class="menu-button">Submit</button>
   </p>
 
 {{/simple-form}}
