--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -1,7 +1,7 @@
 <div class="main">
   <div class="parent-login-form">
-    {{#simple-form class="form-field" onsubmit=(action loginUser) as |formValues|}}
-    <h2>Parent Login</h2>
+    {{#simple-form class="form-field" onsubmit=(action loginParent) as |formValues|}}
+      <h2>Parent Login</h2>
       <p class="form-inputs">
         <label class="input-label">Email:</label>
         {{input class="input-field" type="text" placeholder="Email" value=formValues.email}}
@@ -14,37 +14,30 @@
 
 
 
-      <button class="menu-button">
-        {{#link-to "dashboard.parent"}}LogIn{{/link-to}}
-      </button>
+      <button class="menu-button">Log In</button>
 
 
 
-      {{#link-to "sign-up"}}
-        <button class="signup-btn">SignUp</button>
-      {{/link-to}}
+      {{#link-to "sign-up"}}SignUp{{/link-to}}
     {{/simple-form}}
   </div>
   <div class="child-login-form">
-  {{#simple-form class="form-field" onsubmit=(action loginUser) as |formValues|}}
-    <h2>Child Login</h2>
-    <p class="form-inputs">
-      <label class="input-label">Email:</label>
-      {{input class="input-field" type="text" placeholder="Email" value=formValues.email}}
-    </p>
+    {{#simple-form class="form-field" onsubmit=(action loginChild) as |formValues|}}
+      <h2>Child Login</h2>
+      <p class="form-inputs">
+        <label class="input-label">Email:</label>
+        {{input class="input-field" type="text" placeholder="Email" value=formValues.email}}
+      </p>
 
-    <p class="form-field">
-      <label class="input-label">Password:</label>
-      {{input class="input-field" type="password" placeholder="Password" value=formValues.password}}
-    </p>
+      <p class="form-field">
+        <label class="input-label">Password:</label>
+        {{input class="input-field" type="password" placeholder="Password" value=formValues.password}}
+      </p>
 
 
-    <button class="menu-button">
-      {{#link-to "dashboard.parent"}}LogIn{{/link-to}}
-    </button>
-
+      <button class="menu-button">Log In</button>
     {{/simple-form}}
-</div>
+  </div>
 </div>
 
 
