--- a/app/dashboard/parent/template.hbs
+++ b/app/dashboard/parent/template.hbs
@@ -1,3 +1,23 @@
+<div class="about-container">
+  <h2>About</h2>
+  <p>this is our about text.  We shall discuss the thought process and creation of project.</p>
+</div>
+<div class="parent-header">
+  <h2>Parent Header</h2>
+<div class="button-box">
+<button class="menu-button">Child</button>
+
+{{#link-to "dashboard.parent.chores.new"}}
+<button class="menu-button">Chores</button>
+{{/link-to}}
+
+{{#link-to "dashboard.parent.new-reward"}}
+<button class="menu-button">Reward</button>
+{{/link-to}}
+
+<button class="menu-button">Log Out</button>
+</div>
+</div>
 <div class="content-container">
   <div class="sidebar">
     <div class="sidebar-content">
@@ -28,17 +48,8 @@
   </div>
   <div class="main-content">
     <div class="main-items">
-      <h2>Choices</h2>
-        <p>Assignment
-          {{#link-to "dashboard.parent.new-chore"}}
-        <button>Add Assignment</button>
-        {{/link-to}}
-      </p>
-      <p>Prize Booth
-        {{#link-to "dashboard.parent.new-reward"}}
-      <button>Add Reward</button>
-      {{/link-to}}
-    </p>
+
+
     <img src="" alt="">
     </div>
   </div>
