--- a/app/dashboard/parent/new-child/template.hbs
+++ b/app/dashboard/parent/new-child/template.hbs
@@ -1,32 +1,43 @@
-<div class="boss-container">
-  <div class="child-info">
-    {{#simple-form class="" onsubmit=(action createNewChild) as |formValues|}}
-      <p class="form-inputs">
-        <label class="input-label">Username:</label>
-        {{input class="input-field" type="text" placeholder="Username" value=formValues.username}}
-      </p>
-
-      <p class="form-inputs">
-        <label class="input-label">Password:</label>
-        {{input class="input-field" type="password" placeholder="Password" value=formValues.password}}
-      </p>
-
-      <p class="form-inputs">
-        <label class="input-label">Point-Total:</label>
-        {{input class="input-field" type="number" placeholder="Point-Total" value=formValues.point-total}}
-      </p>
-
-      <p class="form-inputs">
-        <label class="input-label">Chore:</label>
-        {{input class="input-field" type="text" placeholder="Chore" value=formValues.chore}}
-      </p>
-
-    <button>Submit</button>
-    {{/simple-form}}
-
-
-  </div>
+<div class="child-list">
+  <ul>
+    {{#each model as |child|}}
+    <li class="child-item">{{child.username}}</li>
+    <li class="child-item">{{child.password}}</li>
+    {{/each}}
+    {{outlet}}
+  </ul>
 </div>
 
+<h2>Add New Child</h2>
+{{#link-to "dashboard.parent.newChild"}}Add Child{{/link-to}}
 
-{{outlet}}
+<table>
+  <thead>
+    <tr>
+      <th>User Name</th>
+      <th>Password</th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    {{#each model as |child|}}
+      <tr>
+        <td>{{child.userName}}</td>
+        <td>{{chore.password}}</td>
+
+        <td>
+          {{#link-to "dashboard.parent.newChild.edit" child.id}}
+          <span class="fa fa-pencil"></span>
+          {{/link-to}}
+        </td>
+        <td>
+          <button class="button" {{action delete chore}}>
+            <span class="fa fa-trash"></span>
+          </button>
+        </td>
+      </tr>
+
+    {{/each}}
+  </tbody>
+</table>
