Parent can assign chores

--- a/app/dashboard/parent/new-child/template.hbs
+++ b/app/dashboard/parent/new-child/template.hbs
@@ -24,7 +24,7 @@
     <button>Submit</button>
     {{/link-to}}
     {{/simple-form}}
-{{!--
+
     <div>
       {{#each model as |child|}}
       <ul><h3>Kidz</h3>
@@ -33,7 +33,7 @@
         <li>{{child.pointTotal}}</li>
       </ul>
       {{/each}}
-    </div> --}}
+    </div>
 
 
   </div>
