--- a/app/dashboard/parent/template.hbs
+++ b/app/dashboard/parent/template.hbs
@@ -1,61 +1,37 @@
 <div class="about-container">
   <h2>About</h2>
-  <p>this is our about text.  We shall discuss the thought process and creation of project.</p>
+  <p>this is our about text. We shall discuss the thought process and creation of project.</p>
 </div>
 <div class="parent-header">
   <h2>Parent Header</h2>
-<div class="button-box">
-  {{#link-to "dashboard.parent"}}
-  <button class="menu-button">Home</button>
-  {{/link-to}}
+  <div class="button-box">
 
-<button class="menu-button">Child</button>
+    <button class="menu-button">Child</button>
 
-<button class="menu-button">Chores</button>
+    {{#link-to "dashboard.parent.chores"}}
+      <button class="menu-button">Chores</button>
+    {{/link-to}}
 
-{{#link-to "dashboard.parent.chores.new"}}
-<button class="menu-button">Add Chores</button>
-{{/link-to}}
+      {{#link-to "dashboard.parent.new-reward"}}
+        <button class="menu-button">Reward</button>
+      {{/link-to}}
 
-{{#link-to "dashboard.parent.new-reward"}}
-<button class="menu-button">Reward</button>
-{{/link-to}}
-
-<button class="menu-button">Log Out</button>
-</div>
+      <button class="menu-button">Log Out</button>
+  </div>
 </div>
 <div class="content-container">
   <div class="sidebar">
     <div class="sidebar-content">
       <h2>Parent Dashboard</h2>
-        {{outlet}}
-      <ul>
-        {{#each model as |child|}}
-        <li class="child-item">{{child.username}}</li>
-        <li class="child-item">{{child.password}}</li>
-        <li class="child-item">{{child.point-total}}</li>
-        <li class="child-item">{{child.chore}}</li>
-        {{/each}}
-      </ul>
 
-      <ul>
-        {{#each model as |chore|}}
-        <li class="chore-item">{{chore.name}}</li>
-        <li class="chore-item">{{chore.description}}</li>
-        <li class="chore-item">{{chore.avatar}}</li>
-        <li class="chore-item">{{chore.points}}</li>
-        <li class="chore-item">{{chore.date}}</li>
-        {{/each}}
-      </ul>
-      {{#link-to "dashboard.parent.newChild"}}
-    <button>Add New Child</button>
-    {{/link-to}}
-  </div>
+      {{outlet}}
+
+    </div>
   </div>
   <div class="main-content">
     <div class="main-items">
 
-    <img src="" alt="">
+      <img src="" alt="">
     </div>
   </div>
 </div>
