--- a/app/dashboard/parent/new-chore/template.hbs
+++ b/app/dashboard/parent/new-chore/template.hbs
@@ -1,5 +1,18 @@
+<h1>New Chorez</h1>
 
-{{#link-to "dashboard.parent.chores.new"}}New Chore{{/link-to}}
+{{#simple-form onsubmit=(action newChore) as |formValues|}}
+  {{input placeholder="name" value=formValues.name}}
+  {{input placeholder="description" value=formValues.description}}
+  {{input placeholder="avatar" value=formValues.avatar}}
+  {{input placeholder="points" value=formValues.points}}
+  {{input placeholder="date" value=formValues.date}}
+  <p>
+    {{#link-to "dashboard.parent.new-chore"}}Cancel{{/link-to}}
+    <button>SAVE</button>
+  </p>
+
+{{/simple-form}}
+
 
 <table>
   <thead>
@@ -13,6 +26,7 @@
       <th></th>
     </tr>
   </thead>
+
   <tbody>
     {{#each model as |chore|}}
       <tr>
@@ -21,11 +35,6 @@
         <td>{{chore.avatar}}</td>
         <td>{{chore.points}}</td>
         <td>{{chore.date}}</td>
-        <td>
-          {{#link-to "dashboard.parent.chores.edit" chore.id}}
-          <span class="fa fa-pencil"></span>
-          {{/link-to}}
-        </td>
         <td>
           <button class="button" {{action delete chore}}>
             <span class="fa fa-trash"></span>
