--- a/app/dashboard/parent/children/new/template.hbs
+++ b/app/dashboard/parent/children/new/template.hbs
@@ -1,4 +1,4 @@
-<h1>Edit Children</h1>
+<h1>Add Children</h1>
 
 {{#simple-form startingValues=model onsubmit=(action saveEdit model) as |formValues|}}
   {{input placeholder="userName" value=formValues.userName}}
