--- a/app/dashboard/parent/new-child/template.hbs
+++ b/app/dashboard/parent/new-child/template.hbs
@@ -25,6 +25,8 @@
     <button>Submit</button>
     {{/link-to}}
     {{/simple-form}}
+  </div>
+</div>
 
     <div>
       {{#each model as |child|}}
